feat: Add secrets loading for workflow node testing and webhook endpoint
- Add secrets loading in api-service for workflow node testing
  - Loads and decrypts secrets from secrets-service
  - Converts secrets array to object format for execution-service
  - Adds INTERNAL_SERVICE_KEY to docker-compose.yml

- Implement webhook endpoint /api/webhook/:workflowId
  - Public endpoint (no auth required)
  - Loads workflow from database
  - Loads and decrypts secrets for tenant
  - Forwards to execution-service with workflow and secrets
  - Allows unpublished workflows for testing

- Add Kong route for webhook endpoint
  - Route /api/webhook -> api-service
  - Supports POST and OPTIONS methods

- Update workflow node test route to use loaded secrets
  - Secrets are now automatically loaded from secrets-service
  - No need to pass secrets from frontend

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "description": "MonshyFlow - Professional Node.js-Only Workflow Automation Platform",
   "workspaces": [
     "packages/*",
-    "frontend"
+    "frontend",
+    "seed"
   ],
   "scripts": {
     "dev": "pnpm --filter './packages/*' --parallel dev",
     "build": "pnpm --recursive build",
+    "build:packages": "pnpm --filter '@monshy/*' build",
     "test": "pnpm --recursive test",
     "lint": "pnpm --recursive lint",
     "format": "prettier --write \"packages/**/*.ts\"",
