--- a/packages/secrets-service/package.json
+++ b/packages/secrets-service/package.json
@@ -15,6 +15,7 @@
     "@monshy/core": "workspace:*",
     "@monshy/database": "workspace:*",
     "@monshy/auth": "workspace:*",
+    "axios": "^1.12.2",
     "express": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
