--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,36 @@ services:
     networks:
       - agentbuilder-network
 
+  # Kong Gateway (API Gateway)
+  kong:
+    image: kong:3.9
+    container_name: monshyflow-kong
+    restart: unless-stopped
+    ports:
+      - "5000:8000"  # Proxy Port (extern: 5000, intern: 8000) - für ngrok Kompatibilität
+      - "8001:8001"  # Admin API
+      - "8443:8443"  # Proxy SSL
+      - "8444:8444"  # Admin API SSL
+    environment:
+      KONG_DATABASE: "off"  # DB-less mode (deklarative Konfiguration)
+      KONG_DECLARATIVE_CONFIG: /kong/kong.yml
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+      KONG_PROXY_LISTEN: 0.0.0.0:8000  # Intern bleibt 8000, extern mappen wir auf 5000
+    volumes:
+      - ./kong/kong.yml:/kong/kong.yml:ro
+    networks:
+      - agentbuilder-network
+    depends_on:
+      - api-service
+      - auth-service
+      - secrets-service
+      - execution-service
+      - scheduler-service
+
   # Node.js Services
   api-service:
     build:
@@ -29,8 +59,9 @@ services:
       dockerfile: packages/api-service/Dockerfile
     container_name: monshyflow-api-service
     restart: unless-stopped
-    ports:
-      - "5001:80"
+    # Port 5000 entfernt - API Service ist nur noch über Kong Gateway (Port 8000) erreichbar
+    expose:
+      - "80"
     environment:
       - NODE_ENV=development
       - PORT=80
@@ -43,6 +74,7 @@ services:
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-secret-key-min-32-chars}
       - JWT_ISSUER=monshy-auth-service
       - JWT_AUDIENCE=monshy-services
+      - INTERNAL_SERVICE_KEY=${INTERNAL_SERVICE_KEY:-internal-service-key}
     depends_on:
       - monshyflow-mongodb
       - redis
@@ -83,8 +115,13 @@ services:
       - MONGODB_URL=mongodb://admin:admin123@MonshyFlow-mongodb:27017/MonshyFlow?authSource=admin
       - SECRETS_ENCRYPTION_KEY=${SECRETS_ENCRYPTION_KEY:-secrets-encryption-key-min-32-chars}
       - INTERNAL_SERVICE_KEY=${INTERNAL_SERVICE_KEY:-internal-service-key}
+      - AUTH_SERVICE_URL=http://auth-service:80
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-secret-key-min-32-chars}
+      - JWT_ISSUER=monshy-auth-service
+      - JWT_AUDIENCE=monshy-services
     depends_on:
       - monshyflow-mongodb
+      - auth-service
     networks:
       - agentbuilder-network
 
@@ -113,7 +150,7 @@ services:
     container_name: MonshyFlow-mongodb
     restart: unless-stopped
     ports:
-      - "27018:27017"  # Anderer Port, um Konflikt mit agentbuilder-mongodb zu vermeiden
+      - "27019:27017"  # Anderer Port, um Konflikt mit agentbuilder-mongodb zu vermeiden
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin123
