--- a/packages/execution-service/tsconfig.json
+++ b/packages/execution-service/tsconfig.json
@@ -14,6 +14,6 @@
     "types": ["node"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/**/__tests__/**"]
 }
 
