fix: Disable service-level rate limiting in development and improve E2E test cleanup
- Disable apiLimiter in development (Kong handles rate limiting)
  - Service-level rate limiting was causing 429 errors in E2E tests
  - Kong already provides centralized rate limiting (5000/min)
  - Keep apiLimiter in production as defense-in-depth

- Improve test cleanup safety
  - Only delete secrets with timestamp pattern (e.g., 'test-secret-1234567890')
  - Prevents accidental deletion of user-created secrets
  - Pattern: prefix_separator_timestamp (supports both _ and -)

- Optimize E2E test configuration
  - Increase test timeout to 60s (from 30s) for rate limit retries
  - Reduce retry wait time to 15s (from 60s)
  - Reduce workers to 1 for more stable execution
  - Add cleanup timeout protection (max 20s)

- Add manual cleanup script
  - cleanup-test-secrets.ts for manual test secret cleanup
  - Uses existing auth state
  - Only deletes secrets matching test patterns

- Increase Kong rate limits for Secrets Service
  - 5000/min (from 2000/min)
  - 50000/hour (from 20000/hour)

--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -212,13 +212,13 @@ plugins:
       policy: local
 
   # Rate Limiting für Secrets Service
-  # Erhöht für E2E-Tests und Development
+  # Sehr hoch für E2E-Tests und Development
   - name: rate-limiting
     service: secrets-service
     route: secrets-routes
     config:
-      minute: 2000  # Sehr hoch für E2E-Tests (6 parallele Workers)
-      hour: 20000   # Sehr hoch für E2E-Tests
+      minute: 5000  # Sehr hoch für E2E-Tests (erhöht von 2000)
+      hour: 50000   # Sehr hoch für E2E-Tests (erhöht von 20000)
       policy: local
       hide_client_headers: false
       limit_by: ip
