--- a/frontend/e2e/package.json
+++ b/frontend/e2e/package.json
@@ -7,10 +7,12 @@
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug",
-    "test:report": "playwright show-report"
+    "test:report": "playwright show-report",
+    "cleanup": "tsx cleanup-test-secrets.ts"
   },
   "devDependencies": {
-    "@playwright/test": "^1.57.0"
+    "@playwright/test": "^1.57.0",
+    "tsx": "^4.7.0"
   }
 }
 
