chore(frontend): prepare for open source release
- Remove private flag from package.json
- Update version to 0.1.0-alpha
- Add repository, license, keywords, and author metadata
- Update index.html with proper title and meta tags
- Create .env.example with all environment variables
- Update README.md with MonshyFlow branding and features

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,25 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@monshyflow/frontend",
+  "version": "0.1.0-alpha",
   "type": "module",
+  "description": "MonshyFlow Frontend - AI-First Workflow Automation Platform",
+  "author": "MonshyFlow Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/evalolabs/MonshyFlow.git",
+    "directory": "frontend"
+  },
+  "keywords": [
+    "workflow",
+    "automation",
+    "ai",
+    "react",
+    "typescript",
+    "workflow-builder",
+    "node-based",
+    "visual-programming"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
