feat: Professional API endpoint structure and schema validation fixes
- Implement new REST-conform endpoint structure:
  - POST /api/workflows/:id/execute (authenticated, for integrated systems)
  - POST /api/webhooks/:id (public, for external webhooks)
  - GET /api/internal/workflows/:id (service-to-service with service key)
  - GET /api/executions/:id (execution status)

- Add service key middleware for internal endpoints
- Improve schema validation to handle nested and direct input formats
- Add better error handling with detailed error messages
- Update Kong Gateway routes for new endpoint structure
- Update frontend to use new endpoints
- Update execution-service to use internal workflow endpoint
- Add comprehensive documentation for MonshyBot integration
- Fix 500 errors with improved validation and error handling

Breaking changes:
- /api/execute/:id -> /api/workflows/:id/execute
- /api/webhook/:id -> /api/webhooks/:id (plural)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "@monshyflow/frontend",
   "version": "0.1.0-alpha",
   "type": "module",
-  "description": "MonshyFlow Frontend - AI-First Workflow Automation Platform",
+  "description": "MonshyFlow Frontend - AI-Powered Workflow Automation Platform",
   "author": "MonshyFlow Team",
   "license": "MIT",
   "repository": {
