--- a/packages/execution-service/package.json
+++ b/packages/execution-service/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@monshy/core": "workspace:*",
     "@openai/agents": "^0.1.10",
     "@types/nodemailer": "^7.0.4",
     "ajv": "^8.17.1",
