--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,9 @@
     "test:e2e:report": "cd e2e && pnpm test:report"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@uiw/react-codemirror": "^4.25.4",
     "@xyflow/react": "^12.8.6",
     "axios": "^1.12.2",
     "dagre": "^0.8.5",
