feat: Add file upload and management for Code Interpreter Tool
- Add CodeInterpreterFileUpload component with drag-and-drop support
- Add OpenAI Files API service for upload, info retrieval, and deletion
- Add backend endpoints for file info and deletion
- Add Kong Gateway routes for OpenAI Files API
- Fix tool sanitizing for tool-code-interpreter and tool-file-search
- Auto-load file information on component mount
- Delete files from OpenAI platform when removed from UI

--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -218,6 +218,27 @@ services:
           - GET
           - OPTIONS  # CORS Preflight
         strip_path: false
+      - name: execution-openai-files-upload
+        paths:
+          - /api/openai/files/upload
+        methods:
+          - POST
+          - OPTIONS  # CORS Preflight
+        strip_path: false
+      - name: execution-openai-files-info
+        paths:
+          - /api/openai/files/info
+        methods:
+          - POST
+          - OPTIONS  # CORS Preflight
+        strip_path: false
+      - name: execution-openai-files-delete
+        paths:
+          - /api/openai/files/
+        methods:
+          - DELETE
+          - OPTIONS  # CORS Preflight
+        strip_path: false
 
   # Scheduler Service
   - name: scheduler-service
