feat: Implement File Search with automatic Vector Store management
- Add FileSearchVectorStoreUpload component with drag-and-drop file upload
- Automatically create Vector Store when files are uploaded
- Automatically add files to Vector Store after upload
- Add backend endpoints for Vector Store CRUD operations (create, add files, get info, delete)
- Use direct HTTP calls to OpenAI API (bypass SDK TypeScript issues)
- Add automatic polling to update Vector Store status in real-time
- Update NodeConfigPanel to use new Vector Store upload component
- Support both vectorStoreId (new) and vectorStoreIds (legacy) formats
- Fix TypeScript errors in frontend build
- Update test instructions in TOOL_IMPLEMENTATION_CHECKLIST.md
- Add Kong Gateway routes for Vector Store endpoints

--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -239,6 +239,34 @@ services:
           - DELETE
           - OPTIONS  # CORS Preflight
         strip_path: false
+      - name: execution-openai-vector-stores-create
+        paths:
+          - /api/openai/vector-stores/create
+        methods:
+          - POST
+          - OPTIONS  # CORS Preflight
+        strip_path: false
+      - name: execution-openai-vector-stores-files
+        paths:
+          - /api/openai/vector-stores/
+        methods:
+          - POST
+          - OPTIONS  # CORS Preflight
+        strip_path: false
+      - name: execution-openai-vector-stores-get
+        paths:
+          - /api/openai/vector-stores/
+        methods:
+          - GET
+          - OPTIONS  # CORS Preflight
+        strip_path: false
+      - name: execution-openai-vector-stores-delete
+        paths:
+          - /api/openai/vector-stores/
+        methods:
+          - DELETE
+          - OPTIONS  # CORS Preflight
+        strip_path: false
 
   # Scheduler Service
   - name: scheduler-service
