feat: Add automatic file loading from Vector Store and status polling
- Add backend endpoint to list files in Vector Store (GET /api/openai/vector-stores/:vectorStoreId/files)
- Add frontend service method listVectorStoreFiles() to fetch files from Vector Store
- Automatically load files from Vector Store on component mount (after page refresh)
- Automatically reload files when Vector Store status changes to 'completed'
- Add automatic polling for Vector Store status (every 3 seconds when in_progress)
- Add Kong Gateway route for Vector Store files list endpoint
- Fix: Files now persist after page refresh, matching Code Interpreter behavior

--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -260,6 +260,13 @@ services:
           - GET
           - OPTIONS  # CORS Preflight
         strip_path: false
+      - name: execution-openai-vector-stores-files-list
+        paths:
+          - /api/openai/vector-stores/
+        methods:
+          - GET
+          - OPTIONS  # CORS Preflight
+        strip_path: false
       - name: execution-openai-vector-stores-delete
         paths:
           - /api/openai/vector-stores/
