fix: Correct file ID extraction from Vector Store API response
- Fix: Use f.id instead of f.file_id when extracting file IDs from OpenAI Vector Store API
- The API returns files with 'id' field, not 'file_id'
- Add debug logs to track file extraction process
- Improve loading states and error handling in FileSearchVectorStoreUpload
- Fix Express route order (specific /files route before generic /:vectorStoreId route)

--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -253,13 +253,6 @@ services:
           - POST
           - OPTIONS  # CORS Preflight
         strip_path: false
-      - name: execution-openai-vector-stores-get
-        paths:
-          - /api/openai/vector-stores/
-        methods:
-          - GET
-          - OPTIONS  # CORS Preflight
-        strip_path: false
       - name: execution-openai-vector-stores-files-list
         paths:
           - /api/openai/vector-stores/
@@ -267,6 +260,16 @@ services:
           - GET
           - OPTIONS  # CORS Preflight
         strip_path: false
+        # This route handles /api/openai/vector-stores/:vectorStoreId/files
+        # Must come before the generic get route to match first
+      - name: execution-openai-vector-stores-get
+        paths:
+          - /api/openai/vector-stores/
+        methods:
+          - GET
+          - OPTIONS  # CORS Preflight
+        strip_path: false
+        # This route handles /api/openai/vector-stores/:vectorStoreId (without /files)
       - name: execution-openai-vector-stores-delete
         paths:
           - /api/openai/vector-stores/
