feat: Add proper file removal from Vector Store
- Add backend endpoint DELETE /api/openai/vector-stores/:vectorStoreId/files/:fileId to remove files from vector store
- Add frontend service method removeFileFromVectorStore() to call the new endpoint
- Update handleRemoveFile to first remove file from vector store, then delete from OpenAI
- Reload vector store status and files list after removal to reflect changes
- Add Kong Gateway route for the new remove-file endpoint
- Fix: Vector Store file counts now update correctly after file removal

--- a/kong/kong.yml
+++ b/kong/kong.yml
@@ -253,6 +253,15 @@ services:
           - POST
           - OPTIONS  # CORS Preflight
         strip_path: false
+      - name: execution-openai-vector-stores-remove-file
+        paths:
+          - /api/openai/vector-stores/
+        methods:
+          - DELETE
+          - OPTIONS  # CORS Preflight
+        strip_path: false
+        # This route handles /api/openai/vector-stores/:vectorStoreId/files/:fileId
+        # Must come before the generic delete route to match first
       - name: execution-openai-vector-stores-files-list
         paths:
           - /api/openai/vector-stores/
