--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/theme-one-dark": "^6.1.3",
+    "@tanstack/react-table": "^8.21.3",
     "@uiw/react-codemirror": "^4.25.4",
     "@xyflow/react": "^12.8.6",
     "axios": "^1.12.2",
