config: reduce Dependabot frequency and limit PRs
- Change schedule from weekly to monthly
- Reduce open PR limit from 10 to 5 (root) and 5 to 3 (frontend)
- Add management guide for handling Dependabot PRs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,30 +4,36 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 10
+      interval: "monthly"  # Changed from weekly to monthly
+    open-pull-requests-limit: 5  # Reduced from 10 to 5
     labels:
       - "dependencies"
       - "automated"
+    # Only security updates for now
+    # Uncomment to enable all updates:
+    # ignore:
+    #   - dependency-name: "*"
+    #     update-types: ["version-update:semver-major", "version-update:semver-minor"]
 
-  # Frontend dependencies
+  # Frontend dependencies - less frequent
   - package-ecosystem: "npm"
     directory: "/frontend"
     schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 5
+      interval: "monthly"  # Changed from weekly to monthly
+    open-pull-requests-limit: 3  # Reduced from 5 to 3
     labels:
       - "dependencies"
       - "frontend"
       - "automated"
 
-  # Docker dependencies
+  # Docker dependencies - only security
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     labels:
       - "dependencies"
       - "docker"
       - "automated"
-
+    # Only security updates
+    open-pull-requests-limit: 2
