--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+# Cancel in-progress runs when a new commit is pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
@@ -47,11 +52,13 @@ jobs:
       run: |
         cd frontend
         pnpm lint || true
+      continue-on-error: true
 
     - name: Type check
       run: |
         cd frontend
         pnpm type-check || true
+      continue-on-error: true
 
     - name: Run tests (if available)
       run: |
@@ -76,6 +83,19 @@ jobs:
       with:
         version: 8
 
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+    - name: Setup pnpm cache
+      uses: actions/cache@v3
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
+
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
 
@@ -91,4 +111,3 @@ jobs:
         cd frontend
         pnpm build
       continue-on-error: true
-
