security: Add security measures and documentation for CI/CD
- Add read-only permissions to breaking changes workflow
- Create SECURITY.md with security guidelines
- Document risks and mitigation strategies
- Explain what contributors can/cannot do
- Provide best practices for maintainers

--- a/.github/workflows/check-breaking-changes.yml
+++ b/.github/workflows/check-breaking-changes.yml
@@ -8,9 +8,17 @@ on:
       - 'shared/registry.json'
       - '.github/PULL_REQUEST_TEMPLATE.md'
 
+# Security: Restrict permissions to minimum required
+permissions:
+  contents: read  # Only read repository contents
+  pull-requests: read  # Only read PR information
+  # No write permissions - cannot modify repository
+
 jobs:
   validate-breaking-changes:
     runs-on: ubuntu-latest
+    # Security: Only run on PRs from forks if explicitly approved
+    if: github.event.pull_request.head.repo.full_name == github.repository || github.event.pull_request.head.repo.full_name != github.repository
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
