--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "description": "MonshyFlow Frontend - AI-Powered Workflow Automation Platform",
   "author": "MonshyFlow Team",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/evalolabs/MonshyFlow.git",
