--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "MonshyFlow - AI-Powered Workflow Automation Platform",
+  "license": "Apache-2.0",
   "workspaces": [
     "packages/*",
     "frontend",
