--- a/.github/workflows/ci-packages.yml
+++ b/.github/workflows/ci-packages.yml
@@ -35,6 +35,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
+          list-files: git diff
           filters: |
             core:
               - 'packages/core/**'
