fix: Add permissions to detect-changes job for paths-filter API access

--- a/.github/workflows/ci-packages.yml
+++ b/.github/workflows/ci-packages.yml
@@ -15,6 +15,9 @@ jobs:
   # Detect which packages have changed
   detect-changes:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
     outputs:
       core: ${{ steps.filter.outputs.core }}
       database: ${{ steps.filter.outputs.database }}
@@ -35,7 +38,6 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
-          list-files: git diff
           filters: |
             core:
               - 'packages/core/**'
