feat(azure): add local configuration support for Azure deployment
Add support for local Azure configuration files to allow developers to
maintain their personal Azure account settings without committing them
to the repository.

Changes:
- Add config.local.example.ps1 as a template for local configuration
- Update .gitignore to exclude local configuration files (config.local.ps1, .env.local, etc.)
- Enhance 00-create-all-resources.ps1 to automatically load config.local.ps1 if present
- Update README.md with documentation for local configuration setup

This allows the repository to maintain generic example configurations
while developers can use their own Azure account settings locally.

--- a/.gitignore
+++ b/.gitignore
@@ -154,6 +154,12 @@ strategy/
 analysis/
 .private/
 
+# Azure deployment local configuration
+azure-deployment/config.local.ps1
+azure-deployment/config.local.sh
+azure-deployment/.env.local
+azure-deployment/connection-strings.local.txt
+
 # Build outputs
 [Dd]ebug/
 [Rr]elease/
