feat(azure): improve deployment configuration and documentation
- Add local configuration support with config.local.ps1 (gitignored)
- Scripts now automatically load local config if available
- Add comprehensive documentation for Container Apps deployment
- Add database strategy documentation (MongoDB vs Cosmos DB vs Atlas)
- Add Docker Hub integration scripts and documentation
- Improve script organization with INDEX and QUICK_REFERENCE guides
- Remove redundant documentation files
- Update .gitignore to exclude local configuration files
- All scripts support both parameter-based and config-based usage

--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,10 @@ azure-deployment/config.local.sh
 azure-deployment/.env.local
 azure-deployment/connection-strings.local.txt
 
+# Docker Hub credentials (if stored locally)
+docker-hub-credentials.txt
+.dockerhub
+
 # Build outputs
 [Dd]ebug/
 [Rr]elease/
