--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && node scripts/fix-favicon.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
