--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,11 +13,13 @@ services:
       dockerfile: ./frontend/Dockerfile
       args:
         VITE_API_URL: ${VITE_API_URL:-}
+        VITE_LOGO_PATH: ${VITE_LOGO_PATH:-/logo.png}
+        VITE_APP_NAME: ${VITE_APP_NAME:-Monshy}
     container_name: monshyflow-frontend
     restart: unless-stopped
     ports:
       - "8080:80"  # Port 8080 für parallelen Betrieb mit MonshyBot (Port 80)
-      - "8443:443"  # Für späteres SSL
+      # Port 443 wird von Nginx Reverse Proxy gehandhabt, nicht mehr benötigt
     depends_on:
       - monshyflow-kong
     networks:
